--- a/src/app/pages/tm/tm-edit/tm-edit.component.scss
+++ b/src/app/pages/tm/tm-edit/tm-edit.component.scss
@@ -344,7 +344,7 @@ mat-card-header {
 }
 
 .no-items-message {
-  color: var(--color-text-disabled);
+  color: var(--color-text-secondary);
   font-style: italic;
   padding: 12px 0;
   text-align: center;
